# django-schema-viewer

./: .gitignore  README.md  conftest.py  manage.py  pyproject.toml
.github/workflows/: ci.yml
src/schema_viewer/: __init__.py  apps.py  urls.py  views.py
src/schema_viewer/static/schema_viewer/css/: schema-viewer.css
src/schema_viewer/static/schema_viewer/js/: canvas.js  layout.js  markers.js  utils.js
src/schema_viewer/templates/schema_viewer/: index.html
tests/: settings.py  test_views.py  urls.py
tests/sample_app/: __init__.py  apps.py  models.py
