[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-schema-viewer"
version = "0.1.0"
description = "Interactive visualization tool for Django model relationships"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]
keywords = ["django", "schema", "visualization", "erd", "models"]
dependencies = [
    "django>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "django-stubs>=4.2",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/django-schema-viewer"
Documentation = "https://github.com/YOUR_USERNAME/django-schema-viewer#readme"
Repository = "https://github.com/YOUR_USERNAME/django-schema-viewer.git"
Issues = "https://github.com/YOUR_USERNAME/django-schema-viewer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
schema_viewer = ["templates/**/*", "static/**/*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
]
ignore = []

[tool.mypy]
python_version = "3.9"
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
addopts = "-v --tb=short"
